article.meta_data['og']['title']

--- a/ScrapeAndSummarize_CNN_News_Articles.ipynb
+++ b/ScrapeAndSummarize_CNN_News_Articles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,24 +52,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Rússia cortará fornecimento de eletricidade para a Finlândia no sábado, diz operadora | CNN Brasil'"
+       "'“A RAO Nordic Oy, uma subsidiária da entidade russa Inter RAO, que comercializa eletricidade pelos interconectores de 400 kV, suspenderá as importações de eletricidade para a Finlândia à 1h da manhã de sábado, 14 de maio de 2022”, segundo Fingrid.\\n“Infelizmente, na atual situação de falta de receita em dinheiro, a RAO Nordic não pode fazer pagamentos pela eletricidade importada da Rússia.\\nSegundo Fingrid, a adequação da eletricidade na Finlândia não está ameaçada, com as importações russas nos últimos anos cobrindo 10% do consumo total da Finlândia.\\n“A falta de importação de eletricidade da Rússia será compensada importando mais eletricidade da Suécia e gerando mais eletricidade na Finlândia”, disse Reima Päivinen, vice-presidente sênior de operações do sistema de energia da Fingrid.\\nO Ministério das Relações Exteriores da Rússia disse que a possível adesão da Finlândia à Otan marca uma “mudança radical na política externa do país” e alertou sobre contramedidas.'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "article.meta_data.items()\n",
-    "article.meta_data['og']['title']"
+    "article.meta_data.items()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "site_name = article.meta_data['og']['site_name']\n",
+    "title = article.meta_data['og']['title']\n",
+    "text = article.text\n",
+    "summary = article.summary\n"
    ]
   }
  ],
