--- a/gov.br/WebScrape_ANEEL.ipynb
+++ b/gov.br/WebScrape_ANEEL.ipynb
@@ -247,7 +247,7 @@
     "print(df_date_range)\n",
     "\n",
     "# checks if the dataframe has null values\n",
-    "df_filt.isnull().sum()"
+    "df_filtered.isnull().sum()"
    ]
   },
   {
@@ -274,170 +274,164 @@
     "\n",
     "## manual stopwords input\n",
     "manual_stopwords = [wordcloud_theme,\n",
-    "\n",
-    "                                                    'cerca',\n",
-    "                                                    'país',\n",
-    "                                                    'disse',\n",
-    "                                                    'agora',\n",
-    "                                                    'ouvir',\n",
-    "                                                    'notícia',\n",
-    "                                                    'ano' ,\n",
-    "                                                    'entanto',\n",
-    "                                                    'episódio',\n",
-    "                                                    'ainda',\n",
-    "                                                    'acordo',\n",
-    "                                                    'demanda',\n",
-    "                                                    'maior',\n",
-    "                                                    'dia',\n",
-    "                                                    'segundo',\n",
-    "                                                    'pode',\n",
-    "                                                    'desde',\n",
-    "                                                    'todo',\n",
-    "                                                    'sobre',\n",
-    "                                                    'getty',\n",
-    "                                                    'getty images',\n",
-    "                                                    'anadolu',\n",
-    "                                                    'images',\n",
-    "                                                    'agency',\n",
-    "                                                    'ante',\n",
-    "                                                    'após',\n",
-    "                                                    'segunda',\n",
-    "                                                    'terça',\n",
-    "                                                    'quarta',\n",
-    "                                                    'quinta',\n",
-    "                                                    'sexta',\n",
-    "                                                    'sabado',\n",
-    "                                                    'domingo',\n",
-    "                                                    'feira',\n",
-    "                                                    'enquanto',\n",
-    "                                                    'deve',\n",
-    "                                                    'semana',\n",
-    "                                                    'nesta',\n",
-    "                                          'caso',\n",
-    "                                          'diz',\n",
-    "                                          'hoje',\n",
-    "                                          'brasil',\n",
-    "                                          'empresa',\n",
-    "                                          'grande',\n",
-    "                                          'fonte',\n",
-    "                                          'renovável',\n",
-    "                                          'afirma',\n",
-    "                                          'área',\n",
-    "                                          'uso',\n",
-    "                                          'capacidade',\n",
-    "                                          'apenas',\n",
-    "                                          'partir',\n",
-    "                                          'projeto',\n",
-    "                                          'cnn',\n",
-    "                                          'passado',\n",
-    "                                          'partir',\n",
-    "                                          'porque',\n",
-    "                                          'custo',\n",
-    "                                          'exemplo',\n",
-    "                                          'especialista',\n",
-    "                                          'skydweller',\n",
-    "                                          'vai',\n",
-    "                                          'outra',\n",
-    "                                          'gera',\n",
-    "                                          'loja',\n",
-    "                                'através',\n",
-    "                                'índice',\n",
-    "                                'texto',\n",
-    "                                'bem',\n",
-    "                                'endereço',\n",
-    "                                'necessário',\n",
-    "                                'presidente',\n",
-    "                                'presente termo',\n",
-    "                                'pessoa',\n",
-    "                                'nº',\n",
-    "                                'privacidade',\n",
-    "                                'assinante',\n",
-    "                                'assinantes',\n",
-    "                                'portal',\n",
-    "                                'pagamento',\n",
-    "                                'serviço',\n",
-    "                                'grupo canalenergia',\n",
-    "                                'br',\n",
-    "                                'portal canalenergia',\n",
-    "                                'acesso',\n",
-    "                                'assinatura',\n",
-    "                                'conteúdo',\n",
-    "                                'cadastro',\n",
-    "                                'canalenergia',\n",
-    "                                'plano',\n",
-    "                                'informações',\n",
-    "                                'direito',\n",
-    "                                'data',\n",
-    "                                'adesão',\n",
-    "                                'cobrança',\n",
-    "                                'mail',\n",
-    "                                'débito',\n",
-    "                                'qualquer',\n",
-    "                                'valor',\n",
-    "                                'conta',\n",
-    "                                'toda',\n",
-    "                                'outro',\n",
-    "                                'senha',\n",
-    "                                'prazo',\n",
-    "                                'utilização',\n",
-    "                                'termo',\n",
-    "                                'neste',\n",
-    "                                'todos',\n",
-    "                                'poderá',\n",
-    "                                'política',\n",
-    "                                'alta',\n",
-    "                                'sendo',\n",
-    "                                'setor',\n",
-    "                                'deverá',\n",
-    "                                'forma',\n",
-    "                                'responsável',\n",
-    "                                'disponíveis',\n",
-    "                                'responsabilidade',\n",
-    "                                'seção',\n",
-    "                                'dados',\n",
-    "                                'empresas',\n",
-    "                                'período',\n",
-    "                                'identificação',\n",
-    "                                'redação canalenergia',\n",
-    "                                'cancelamento',\n",
-    "                                'onde',\n",
-    "                                'login',\n",
-    "                                'plano redação',\n",
-    "                                'vencimento',\n",
-    "                                'parte',\n",
-    "                                'próprio',\n",
-    "                                'grupo',\n",
-    "                                'relação',\n",
-    "                                'total',\n",
-    "                                'internet',\n",
-    "                                'além',\n",
-    "                                'energia',\n",
-    "                                'agência',\n",
-    "                                'mw',\n",
-    "                                'nacional',\n",
-    "                                'lt',\n",
-    "                                'kv',\n",
-    "                                'sistema',\n",
-    "                                'consulta',\n",
-    "                                'gov',\n",
-    "                                'definição',\n",
-    "                                'nacional',\n",
-    "                                'elétrica',\n",
-    "                                'interessados',\n",
-    "                                'lt kv',\n",
-    "                                'novo',\n",
-    "                                'tensão',\n",
-    "                                'site',\n",
-    "                                'serviços',\n",
-    "                                'pública',\n",
-    "                                'estado',\n",
-    "                                'desta',\n",
-    "                                'youtube',\n",
-    "                                'constrained',\n",
-    "                                'podem',\n",
-    "                                'audiência',\n",
-    "                                'áreas'\n",
-    "                                                   ]\n",
+    "    'cerca',\n",
+    "    'país',\n",
+    "    'disse',\n",
+    "    'agora',\n",
+    "    'ouvir',\n",
+    "    'notícia',\n",
+    "    'ano' ,\n",
+    "    'entanto',\n",
+    "    'episódio',\n",
+    "    'ainda',\n",
+    "    'acordo',\n",
+    "    'demanda',\n",
+    "    'maior',\n",
+    "    'dia',\n",
+    "    'segundo',\n",
+    "    'pode',\n",
+    "    'desde',\n",
+    "    'todo',\n",
+    "    'sobre',\n",
+    "    'getty',\n",
+    "    'getty images',\n",
+    "    'anadolu',\n",
+    "    'images',\n",
+    "    'agency',\n",
+    "    'ante',\n",
+    "    'após',\n",
+    "    'segunda',\n",
+    "    'terça',\n",
+    "    'quarta',\n",
+    "    'quinta',\n",
+    "    'sexta',\n",
+    "    'sabado',\n",
+    "    'domingo',\n",
+    "    'feira',\n",
+    "    'enquanto',\n",
+    "    'deve',\n",
+    "    'semana',\n",
+    "    'nesta',\n",
+    "    'caso',\n",
+    "    'diz',\n",
+    "    'hoje',\n",
+    "    'brasil',\n",
+    "    'empresa',\n",
+    "    'grande',\n",
+    "    'fonte',\n",
+    "    'renovável',\n",
+    "    'afirma',\n",
+    "    'área',\n",
+    "    'uso',\n",
+    "    'capacidade',\n",
+    "    'apenas',\n",
+    "    'partir',\n",
+    "    'projeto',\n",
+    "    'cnn',\n",
+    "    'passado',\n",
+    "    'partir',\n",
+    "    'porque',\n",
+    "    'custo',\n",
+    "    'exemplo',\n",
+    "    'especialista',\n",
+    "    'skydweller',\n",
+    "    'vai',\n",
+    "    'outra',\n",
+    "    'gera',\n",
+    "    'loja',\n",
+    "    'através',\n",
+    "    'índice',\n",
+    "    'texto',\n",
+    "    'bem',\n",
+    "    'endereço',\n",
+    "    'necessário',\n",
+    "    'presidente',\n",
+    "    'presente termo',\n",
+    "    'pessoa',\n",
+    "    'nº',\n",
+    "    'privacidade',\n",
+    "    'assinante',\n",
+    "    'assinantes',\n",
+    "    'portal',\n",
+    "    'pagamento',\n",
+    "    'serviço',\n",
+    "    'br',\n",
+    "    'acesso',\n",
+    "    'assinatura',\n",
+    "    'conteúdo',\n",
+    "    'cadastro',\n",
+    "    'plano',\n",
+    "    'informações',\n",
+    "    'direito',\n",
+    "    'data',\n",
+    "    'adesão',\n",
+    "    'cobrança',\n",
+    "    'mail',\n",
+    "    'débito',\n",
+    "    'qualquer',\n",
+    "    'valor',\n",
+    "    'conta',\n",
+    "    'toda',\n",
+    "    'outro',\n",
+    "    'senha',\n",
+    "    'prazo',\n",
+    "    'utilização',\n",
+    "    'termo',\n",
+    "    'neste',\n",
+    "    'todos',\n",
+    "    'poderá',\n",
+    "    'política',\n",
+    "    'alta',\n",
+    "    'sendo',\n",
+    "    'setor',\n",
+    "    'deverá',\n",
+    "    'forma',\n",
+    "    'responsável',\n",
+    "    'disponíveis',\n",
+    "    'responsabilidade',\n",
+    "    'seção',\n",
+    "    'dados',\n",
+    "    'empresas',\n",
+    "    'período',\n",
+    "    'identificação',\n",
+    "    'cancelamento',\n",
+    "    'onde',\n",
+    "    'login',\n",
+    "    'plano redação',\n",
+    "    'vencimento',\n",
+    "    'parte',\n",
+    "    'próprio',\n",
+    "    'grupo',\n",
+    "    'relação',\n",
+    "    'total',\n",
+    "    'internet',\n",
+    "    'além',\n",
+    "    'energia',\n",
+    "    'agência',\n",
+    "    'mw',\n",
+    "    'nacional',\n",
+    "    'lt',\n",
+    "    'kv',\n",
+    "    'sistema',\n",
+    "    'consulta',\n",
+    "    'gov',\n",
+    "    'definição',\n",
+    "    'nacional',\n",
+    "    'elétrica',\n",
+    "    'interessados',\n",
+    "    'lt kv',\n",
+    "    'novo',\n",
+    "    'tensão',\n",
+    "    'site',\n",
+    "    'serviços',\n",
+    "    'pública',\n",
+    "    'estado',\n",
+    "    'desta',\n",
+    "    'youtube',\n",
+    "    'constrained',\n",
+    "    'podem',\n",
+    "    'audiência',\n",
+    "    'áreas']\n",
     "\n",
     "## stopwords used\n",
     "stop_words  = list(pt_stopwords) + list(STOPWORDS) + list(manual_stopwords) \n",
