--- a/CNN News/WebScrape_CNN_News.ipynb
+++ b/CNN News/WebScrape_CNN_News.ipynb
@@ -11,7 +11,7 @@
     "[Energy Engineer (UnB)](https://www.unb.br/) │ [Data Scientist and Analytics (USP)](https://www5.usp.br/)\n",
     "\n",
     "\n",
-    "## [📧 E-mail](mailto:viniciusgribas@gmail.com?Subject=%5BWebScrappers%5D%20-%20Contact) │ [🎯 Linkedin](https://www.linkedin.com/in/vinicius-guerra-e-ribas/) │ [😸 GitHub](https://github.com/viniciusgribas) \n",
+    "## [📧 E-mail](mailto:viniciusgribas@gmail.com) │ [🎯 Linkedin](https://www.linkedin.com/in/vinicius-guerra-e-ribas/) │ [😸 GitHub](https://github.com/viniciusgribas) \n",
     "\n",
     "---\n",
     "\n",
