--- a/CNN News/WebScrape_CNN_News.ipynb
+++ b/CNN News/WebScrape_CNN_News.ipynb
@@ -821,73 +821,71 @@
     "\n",
     "## manual stopwords input\n",
     "manual_stopwords = [wordcloud_theme,\n",
-    "\n",
-    "                                                    'cerca',\n",
-    "                                                    'país',\n",
-    "                                                    'disse',\n",
-    "                                                    'agora',\n",
-    "                                                    'ouvir',\n",
-    "                                                    'notícia',\n",
-    "                                                    'ano' ,\n",
-    "                                                    'entanto',\n",
-    "                                                    'episódio',\n",
-    "                                                    'ainda',\n",
-    "                                                    'acordo',\n",
-    "                                                    'demanda',\n",
-    "                                                    'maior',\n",
-    "                                                    'dia',\n",
-    "                                                    'segundo',\n",
-    "                                                    'pode',\n",
-    "                                                    'desde',\n",
-    "                                                    'todo',\n",
-    "                                                    'sobre',\n",
-    "                                                    'getty',\n",
-    "                                                    'getty images',\n",
-    "                                                    'anadolu',\n",
-    "                                                    'images',\n",
-    "                                                    'agency',\n",
-    "                                                    'ante',\n",
-    "                                                    'após',\n",
-    "                                                    'segunda',\n",
-    "                                                    'terça',\n",
-    "                                                    'quarta',\n",
-    "                                                    'quinta',\n",
-    "                                                    'sexta',\n",
-    "                                                    'sabado',\n",
-    "                                                    'domingo',\n",
-    "                                                    'feira',\n",
-    "                                                    'enquanto',\n",
-    "                                                    'deve',\n",
-    "                                                    'semana',\n",
-    "                                                    'nesta',\n",
-    "                                          'caso',\n",
-    "                                          'diz',\n",
-    "                                          'hoje',\n",
-    "                                          'brasil',\n",
-    "                                          'empresa',\n",
-    "                                          'grande',\n",
-    "                                          'fonte',\n",
-    "                                          'renovável',\n",
-    "                                          'afirma',\n",
-    "                                          'área',\n",
-    "                                          'uso',\n",
-    "                                          'capacidade',\n",
-    "                                          'apenas',\n",
-    "                                          'partir',\n",
-    "                                          'projeto',\n",
-    "                                          'cnn',\n",
-    "                                          'passado',\n",
-    "                                          'partir',\n",
-    "                                          'porque',\n",
-    "                                          'custo',\n",
-    "                                          'exemplo',\n",
-    "                                          'especialista',\n",
-    "                                          'skydweller',\n",
-    "                                          'vai',\n",
-    "                                          'outra',\n",
-    "                                          'gera',\n",
-    "                                          'loja'\n",
-    "                                                   ]\n",
+    "   'cerca',\n",
+    "   'país',\n",
+    "   'disse',\n",
+    "   'agora',\n",
+    "   'ouvir',\n",
+    "   'notícia',\n",
+    "   'ano' ,\n",
+    "   'entanto',\n",
+    "   'episódio',\n",
+    "   'ainda',\n",
+    "   'acordo',\n",
+    "   'demanda',\n",
+    "   'maior',\n",
+    "   'dia',\n",
+    "   'segundo',\n",
+    "   'pode',\n",
+    "   'desde',\n",
+    "   'todo',\n",
+    "   'sobre',\n",
+    "   'getty',\n",
+    "   'getty images',\n",
+    "   'anadolu',\n",
+    "   'images',\n",
+    "   'agency',\n",
+    "   'ante',\n",
+    "   'após',\n",
+    "   'segunda',\n",
+    "   'terça',\n",
+    "   'quarta',\n",
+    "   'quinta',\n",
+    "   'sexta',\n",
+    "   'sabado',\n",
+    "   'domingo',\n",
+    "   'feira',\n",
+    "   'enquanto',\n",
+    "   'deve',\n",
+    "   'semana',\n",
+    "   'nesta',\n",
+    "   'caso',\n",
+    "   'diz',\n",
+    "   'hoje',\n",
+    "   'brasil',\n",
+    "   'empresa',\n",
+    "   'grande',\n",
+    "   'fonte',\n",
+    "   'renovável',\n",
+    "   'afirma',\n",
+    "   'área',\n",
+    "   'uso',\n",
+    "   'capacidade',\n",
+    "   'apenas',\n",
+    "   'partir',\n",
+    "   'projeto',\n",
+    "   'cnn',\n",
+    "   'passado',\n",
+    "   'partir',\n",
+    "   'porque',\n",
+    "   'custo',\n",
+    "   'exemplo',\n",
+    "   'especialista',\n",
+    "   'skydweller',\n",
+    "   'vai',\n",
+    "   'outra',\n",
+    "   'gera',\n",
+    "   'loja']\n",
     "\n",
     "## stopwords used\n",
     "stop_words  = list(pt_stopwords) + list(STOPWORDS) + list(manual_stopwords) \n",
